[workspace]
members = [
    "programs/*",
    "tests/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", path = "../anchor/lang" }
anchor-spl = { version = "0.30.1", path = "../anchor/spl" }
solana-program = "2.1.6"
solana-program-test = "2.1.6"
solana-sdk = "2.1.6"
borsh = "0.9.3"
borsh-derive = "0.9.3"
shank = "0.4.2"
tokio = { version = "1.32.0", features = ["full"] }

