[package]
name = "enhanced_nft_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "enhanced_nft_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# 特别注意加上anchor-spl/idl-build
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
signature = "1.6.4"
solana-program-test.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
