[package]
name = "puppet-master"
version = "0.1.0"
description = "Created with Anchor test for cpi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "puppet_master"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
puppet = { path = "../puppet", features = ["cpi"]}